[package]
name = "ecdsa-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
hex = "0.4"
jsonwebtoken = "9.3"
k256 = { version = "0.13", features = ["pem"] }
rand = "0.8"
regex = "1.3.9"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
serde_json = "1.0"
sha3 = "0.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }