[package]
name = "ecdsa-jwt"
version = "0.1.1"
edition = "2021"
description = "ECDSA challenge-based authentication with JWT session management"
authors = ["Usher Labs <labs@usher.so>"]
readme = "README.md"
keywords = ["ecdsa", "jwt", "authentication", "crypto", "challenge"]
categories = ["cryptography", "authentication"]
license = "MIT"
repository = "https://github.com/usherlabs/ecdsa-jwt"
homepage = "https://github.com/usherlabs/ecdsa-jwt"

[dependencies]
base64 = "0.22"
hex = "0.4"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
simple_ecdsa_verifier = "0.1.0"
